# imgbatch

./: LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
imgbatch/: cli.py  convert.py  cutout.py  resize.py
tests/: test_basic.py
